<resources>
    <string name="app_name">sharing_bicycle</string>
    <string name="navi_help">帮助</string>
    <string name="login_logo_text">登录</string>
    <string name="login_input_hint">输入账号</string>
    <string name="login_input_pwd_hint">输入密码</string>
    <string name="login_button">登 录</string>
    <string name="login_to_register_button">注 册</string>
    <string name="main_preorder_count_t">预约倒计时</string>
    <string name="main_usebike_button">我要用车</string>
    <string name="main_refresh_button">刷新</string>
    <string name="main_navigate_button">导航</string>
    <string name="main_preorder_button">预约</string>
    <string name="main_report_button">报告</string>
    <string name="navigate_start_navi_button">开始导航</string>
    <string name="navi_clear_button">清除路线</string>
    <string name="preorder_confirm_button">确认预约</string>
    <string name="preorder_confirm_text">确认预约</string>
    <string name="preorder_bicycle_id">车编号</string>
    <string name="preorder_from">从</string>
    <string name="preorder_to">到</string>
    <string name="preorder_hint">(只能预约15分钟以内哦)</string>
    <string name="register_logo">注册</string>
    <string name="register_input_hint">输入账号</string>
    <string name="register_register_pwd_c_hint">确认密码</string>
    <string name="register_pwd_i_hint">输入密码</string>
    <string name="register_button">注 册</string>
    <string name="chart_count_trip">行程统计</string>
    <string name="slide_menu_login">请登录</string>
    <string name="slide_menu_user_info">个人信息</string>
    <string name="slide_menu_wallet">我的钱包</string>
    <string name="slide_menu_credi">我的积分</string>
    <string name="slide_menu_trip_manage">行程管理</string>
    <string name="slide_menu_trip_recode">行程统计</string>
    <string name="slide_menu_account_manage">账号管理</string>
    <string name="slide_log_out">退出登录</string>
    <string name="help_title">帮助</string>
    <string name="help_tuto_prompt">教程</string>
    <string name="q_and_a">Q and A</string>
    <string name="help_register">注册教程</string>
    <string name="help_login">登陆教程</string>
    <string name="help_preorder">预约教程</string>
    <string name="help_use">用车教程</string>
    <string name="help_return">还车教程</string>
    <string name="help_repore">车辆报修教程</string>
    <string name="help_analysis">查询行程分析教程</string>
    <string name="using_end_button">结束\n用车</string>
    <string name="report_title">车辆报修</string>
    <string name="report_type">故障类型:</string>
    <string name="report_abort">取消</string>
    <string name="report_submit">提交</string>
    <string name="using">您正在用车</string>
    <string name="report_input_bike">输入车辆号码:</string>
    <string name="wallet_title">账单详情</string>
    <string name="credit_record_title">积分详情</string>
</resources>
